# solve-mnist

./: Makefile  README.md  make_dataset.py  mnist_flux.jl  mnist_pytorch.ipynb  mnist_tinygrad.ipynb  pyproject.toml
notebooks/: mnist-pytorch.ipynb  mnist_flux.ipynb  mnist_pytorch.ipynb  mnist_tinygrad.ipynb
src/data/: __init__.py  make_dataset.py
src/models/: mnist_flux.jl
